resources/css/beet.css
/*
 * beet.css
 * Author: wolftankk@gmail.com
 *
 *
 */

#loading-mask{
	background: #fff;
	height: 100%;
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	z-index: 20000;
}

#loading{
	height: auto;
	position: absolute;
	left: 45%;
	top:40%;
	padding: 2px;
	z-index:20001;
}

.loading-msg{
	font-size: 11px;
	font-weight: normal;
	display: block;
}

#loading .loading-indicator{
	padding: 10px;
}

header, #header{
	width: 100%;
	padding: 0;
	margin: 0;
}

aside{
	position: absolute;
	width: 360px;
	border: 1px solid #f00;
}

#console-wrapper{
	position: absolute;
	border: 1px solid #0f0;
	background: none repeat scroll 0 0 #FFFFFF;
	border-radius: 5px 5px 5px 5px;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
	left: 365px;
	width: 890px;
}

.beet-navigationbar{
	padding-left: 5px !important;
}

.beet-navigationbar .x-toolbar {
    background: transparent none;
    border-color: transparent;
}

.beet-navtoolbar{
}
.beet-navtoolbar .x-btn-inner,
.x-nbr .beet-navtoolbar .x-btn-icon-text-left button {
    text-align: left !important;
}

.x-tab-tabmenu-left{
	width: 19px;
	height: 20px;
	cursor: pointer;
	zoom: 1;
	z-index: 6;
	float: left;
	background: url('../../resources/themes/images/tab-scroller-menu.gif') no-repeat 0 0;
}

.x-tab-tabmenu-over {
    background-position: -18px 0;
}
.x-tab-tabmenu-disabled {
    background-position: 0 0;
    opacity:.5;
    -moz-opacity:.5;
    filter:alpha(opacity=50);
    cursor:default;
}

.x-grid-checkheader {
    height: 14px;
    background-image: url('../../resources/themes/images/unchecked.gif');
    background-position: 50% -2px;
    background-repeat: no-repeat;
    background-color: transparent;
}

.x-grid-checkheader-checked {
    background-image: url('../../resources/themes/images/checked.gif');
}

.x-grid-checkheader-editor .x-form-cb-wrap {
    text-align: center;
}

/* styles for rows */
.ux-row-action-cell .x-grid3-cell-inner {
	padding:1px 0 0 0;
}
.ux-row-action-item {
	float:left;
	min-width:16px;
	height:16px;
	background-repeat:no-repeat;
	margin: 0 3px 0 2px;
/*	margin: 1px 5px 0 2px; */
	cursor:pointer;
	overflow:hidden;
}
.ext-ie .ux-row-action-item {
	width:16px;
}
.ext-ie .ux-row-action-text {
	width:auto;
}
.ux-row-action-item span {
	vertical-align:middle;
	padding:0 0 0 20px;
	line-height:18px;
}
.ext-ie .ux-row-action-item span {
	width:auto;
}

/* styles for groups */
.x-grid-group-hd div {
	position:relative;
	height:16px;
}
.ux-grow-action-item {
	min-width:16px;
	height:16px;
	background-repeat:no-repeat;
	background-position: 0 50% ! important;
	margin: 0 0 0 4px;
	padding: 0 ! important;
	cursor:pointer;
	float:left;
}
.ext-ie .ux-grow-action-item {
	width:16px;
}
.ux-action-right {
	float:right;
	margin: 0 3px 0 2px;
	padding: 0 ! important;
}
.ux-grow-action-text {
	padding: 0 ! important;
	margin:0 ! important;
	background:transparent none ! important;
	float:left;
}

.x-livesearch-match {
    font-weight: bold;
    background-color: yellow;
}

.x-toolbar .x-form-cb-wrap {
    line-height: 22px;
}
.x-toolbar .x-form-checkbox {
    vertical-align: 0;
}

.x-grid-row-over .x-grid-cell-inner {
    font-weight: bold;
}

/* line 10, /mnt/ebs/nightly/jsduck/template/resources/sass/../../extjs/resources/themes/stylesheets/ext4/default/util/_scroller.scss */
.x-scroller { overflow: hidden; }

/* line 14, /mnt/ebs/nightly/jsduck/template/resources/sass/../../extjs/resources/themes/stylesheets/ext4/default/util/_scroller.scss */
.x-scroller-vertical { border: 1px solid #bfbfbf; border-top-color: #c5c5c5; }

/* line 19, /mnt/ebs/nightly/jsduck/template/resources/sass/../../extjs/resources/themes/stylesheets/ext4/default/util/_scroller.scss */
.x-scroller-horizontal { border: 1px solid #bfbfbf; }

/* line 23, /mnt/ebs/nightly/jsduck/template/resources/sass/../../extjs/resources/themes/stylesheets/ext4/default/util/_scroller.scss */
.x-vertical-scroller-present .x-scroller-horizontal { border-right-width: 0px; }

/* line 27, /mnt/ebs/nightly/jsduck/template/resources/sass/../../extjs/resources/themes/stylesheets/ext4/default/util/_scroller.scss */
.x-scroller-ct { overflow: hidden; position: absolute; margin: 0; padding: 0; border: none; left: 0px; top: 0px; /*
In IE9 (only), the border-box style causes the scroller-ct to be 0px in the
perpendicular dimension and breaks the scroll as well as offsets it by the left
offset that we use to try and keep some size on this element. This works on all
browsers (including IE9).
*/ box-sizing: content-box !important; -ms-box-sizing: content-box !important; -moz-box-sizing: content-box !important; -webkit-box-sizing: content-box !important; }

/* line 48, /mnt/ebs/nightly/jsduck/template/resources/sass/../../extjs/resources/themes/stylesheets/ext4/default/util/_scroller.scss */
.x-scroller-vertical .x-scroller-ct { overflow-y: scroll; }

/* line 52, /mnt/ebs/nightly/jsduck/template/resources/sass/../../extjs/resources/themes/stylesheets/ext4/default/util/_scroller.scss */
.x-scroller-horizontal .x-scroller-ct { overflow-x: scroll; }

